# mpd-klient

./: .flatpak-manifest.json  .gitignore  CMakeLists.txt  com.github.pamugk.mpd-klient.desktop  com.github.pamugk.mpd-klient.metainfo.xml  org.kde.mpd-kontrol.desktop  org.kde.mpd-kontrol.metainfo.xml
android/: AndroidManifest.xml  build.gradle
src/: CMakeLists.txt  main.cpp  mpd-kontrolapplication.cpp  mpd-kontrolapplication.h  mpd-kontrolconfig.kcfgc  mpdclient.cpp  mpdclient.h  mpdklientapplication.cpp  mpdklientapplication.h  mpdklientconfig.kcfgc
src/qml/: Main.qml  MediaLibraryPage.qml  Sidebar.qml
src/settings/: CMakeLists.txt  mpd-kontrolConfigurationView.qml
